Impedir escribir no números

--- a/src/lib/phone-number/phone-number.component.html
+++ b/src/lib/phone-number/phone-number.component.html
@@ -68,7 +68,7 @@
     pattern="\d*"
     matInput
     [(ngModel)]="phoneNumber"
-    (keyup)="onNumberInput($event)"
+    (keypress)="onNumberInput($event)"
     class="w-full"
     [placeholder]="placeholder"
     [required]="required"
