--- a/src/lib/phone-number/phone-number.component.html
+++ b/src/lib/phone-number/phone-number.component.html
@@ -1,6 +1,6 @@
 <div class="element-flex full-height">
   <mat-select
-    class="w-20 full-height"
+    class="country-select full-height"
     name="phoneCode"
     [(ngModel)]="phoneCode"
     (selectionChange)="codeChanges($event)"
