--- a/src/lib/phone-number/phone-number.component.css
+++ b/src/lib/phone-number/phone-number.component.css
@@ -7,8 +7,8 @@
   width: 100%;
 }
 
-.w-20 {
-  width: 6rem;
+.country-select {
+  width: 8rem;
 }
 
 .full-height {
@@ -47,14 +47,6 @@
   margin-right: 6px;
 }
 
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox */
-input[type="number"] {
-  -moz-appearance: textfield;
+.phoneNumberInput {
+  flex: 1 1 0%;
 }
