--- a/src/lib/phone-number/phone-number.component.html
+++ b/src/lib/phone-number/phone-number.component.html
@@ -13,7 +13,7 @@
         <img
           class="option-img"
           aria-hidden
-          src="/assets/image/flags/{{
+          src="/assets/images/flags/{{
             countryCodeAndPhone.countryCode.toLowerCase()
           }}.png"
           width="32"
@@ -44,7 +44,7 @@
               <img
                 class="option-img"
                 aria-hidden
-                src="/assets/image/flags/{{
+                src="/assets/images/flags/{{
                   countryPhone.countryCode.toLowerCase()
                 }}.png"
                 width="32"
